--- a/src/app/map/mini-map/mini-map.component.html
+++ b/src/app/map/mini-map/mini-map.component.html
@@ -1,7 +1,7 @@
 <div class="mini-map">
   <div class="row" *ngFor="let row of rows">
-    <div class="col" *ngFor="let col of cols" [ngClass]="{'light': getGridLight(col, row) === 'light', 'dark': getGridLight(col, row) === 'dark', 'orange': getGridLight(col, row) === 'orange', 'grey': getGridLight(col, row) === 'grey', 'green': getGridLight(col, row) === 'green', 'blue': getGridLight(col, row) === 'blue'}">
-      <span *ngIf="col === 0 && row === 0" class="center">:)</span>
+    <div class="col" *ngFor="let col of cols" [ngClass]="{'light': getGridLight(col, row) === 'light', 'dark': getGridLight(col, row) === 'dark', 'center': col === 0 && row === 0, 'orange': getGridLight(col, row) === 'orange', 'grey': getGridLight(col, row) === 'grey', 'green': getGridLight(col, row) === 'green', 'blue': getGridLight(col, row) === 'blue'}">
+      <span *ngIf="col === 0 && row === 0">:)</span>
       <span *ngIf="!getGridLight(col, row)">x</span>
     </div>
   </div>
